--- a/donate.html
+++ b/donate.html
@@ -22,12 +22,12 @@
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Server IP  </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item">Minecraft: play.shcpublic.com</a>
+              <a class="dropdown-item"></a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="https://discord.gg/75nPFgT" target="_blank">Discord: discord.gg/75nPFgT</a> 
             </div>
           </li> -->
-		  <li class="nav-item nav-text">IP: play.shcpublic.com</li>
+		  <li class="nav-item nav-text"></li>
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -43,8 +43,8 @@
           <div class="row">
             <div class="col-12">
               <h1 class="text-center">Donate</h1>
-				<p class="text-center">When you donate, players are given kits as a thank you for donating!</p>
-				<p class="text-center"><a class="btn btn-primary btn-lg" href="https://paypal.me/shcpublic" target="_blank" role="button">Donate to SHC Public on Paypal</a> </p>
+				<p class="text-center">Donate, It suppotrs us make new servers for more people!</p>
+				<p class="text-center"><a class="btn btn-primary btn-lg" href="https://paypal.me/BuyMCS" target="_blank" role="button">Donate to SHC Public on Paypal</a> </p>
             </div>
           </div>
         </div>
@@ -183,8 +183,8 @@
         <div class="row">
           <div class="col-12">
 
-            <p>Copyright © SHC Public. All rights reserved.</p>
-			<p>Designed by Nic Hanna Studios</p>
+            <p>Copyright © BuyMC. All rights reserved.</p>
+			<p>Designed by JonoLeviaThan Studios</p>
           </div>
         </div>
       </div>
